@@ -1,3 +1,4 @@
+* Export selected records only
 * Use HTML for RichText widget
 * Change Progressbar to work with float between 0 and 1
 * Add Fast Tabbing option
